Fixed alignement in content - home page

--- a/web/assets/home/css/main.css
+++ b/web/assets/home/css/main.css
@@ -227,7 +227,6 @@ body{
 	font-size:12px;
 	font-family: Tahoma, Geneva, sans-serif;
 	position:relative;
-	text-align:center;
 	padding:5px;
 	padding-right:20px;
 	
@@ -248,6 +247,12 @@ body{
 
 #content h1, #content h2{
 	font-size:12px;
+	text-align:center;
+}
+
+#content p{
+	text-align:left;
+	padding-left:5px;
 }
 
 
